--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 #exclude directories with dates
 /[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]/
 /[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]/*
+#ignore venv
+/venv
 #ignore sql files
 /sql/*
 *.sql
